--- a/Themes/Dark.css
+++ b/Themes/Dark.css
@@ -67,3 +67,30 @@ QMessageBox {
 QProgressBar {
     color: whitesmoke;
 }
+
+QTabWidget::pane {
+    border: 1px solid rgb(39, 39, 39);
+    top:-1px; 
+    background: rgb(39, 39, 39);
+} 
+  
+QTabBar::tab {
+    background: rgb(29, 29, 29);
+    border: 1px solid rgb(29, 29, 29);
+    padding: 5px;
+    color: whitesmoke;
+} 
+  
+QTabBar::tab:selected { 
+    background: rgb(39, 39, 39);
+    margin-bottom: -1px; 
+}
+
+QTabBar::scroller {
+    width: 25px;
+}
+
+QTabBar QToolButton {
+    background-color: rgba(39, 39, 39, 1);
+    border:0;
+}
